# stop-sales-by-sectors

./: .gitignore  README.md  accounts_units.json  pyproject.toml
src/: config.py  dependencies.py  filters.py  logger.py  main.py  mappers.py  more_itertools.py  new_types.py  time_helpers.py  units.py
src/connections/: auth_credentials_storage.py  dodo_is.py  event_publisher.py  stop_sales_state.py  units_storage.py
src/context/: auth_credentials_storage.py  dodo_is.py  units_storage.py
src/models/: __init__.py  accounts_units.py  auth_credentials.py  events.py  stop_sales_by_ingredients.py  stop_sales_by_sectors.py  units.py
src/parsers/: auth_credentials.py  stop_sales_by_ingredients.py  units.py
