[tool.poetry]
name = "ingredient-stop-sales"
version = "1.0.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ingredient_stop_sales"}]

[tool.poetry.dependencies]
python = "^3.11"
faststream = "^0.5.5"
httpx = "^0.27.0"
python-json-logger = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
